css fixe for user menu chevrons are not showing up in IE7

--- a/web-app/themes/common/stylesheets/_ozoneUserMenu.scss
+++ b/web-app/themes/common/stylesheets/_ozoneUserMenu.scss
@@ -119,3 +119,13 @@
     color: $owf-usermenu-group-header-hover-color;
   }
 }
+
+.x-ie7 {
+  .group-header {
+    .collapse-toggle {
+      @extend .icon-chevron-down;
+      position: absolute;
+      right: 5px;
+    }
+  }
+}
